# ww-tool

./: .gitignore  AGENTS.md  README.md  deploy.sh  prd.md  pyproject.toml
manual_test/: random_color_generator.py  random_number_generator.py  random_quote_generator.py
src/watchfiles_systemd/: __init__.py  cli.py  entry.py  systemd_bus.py  util.py
src/watchfiles_systemd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/watchfiles_systemd/dash/: __init__.py  app.py  app.tcss  commands_ww.py  discovery_ww.py  models.py  terminals.py
ss_smoketest/: main.py
test/: .gitignore  FRIENDLY_NAMES_TEST_REPORT.md  Makefile  README.md  README_TESTS.md  WW_IMPROVEMENT_SUGGESTIONS.md  WW_TOOL_ROBUSTNESS_REPORT.md  modify_and_test.sh  quick_reload_test.py  run_live_reload_tests.sh  test.py  test_colors.py  test_datetime.py  test_directory_monitor.py  test_directory_watcher.py  test_error_prone.py  test_json_output.py  test_modifiable.py  test_numbers.py  test_quotes.py  test_system_info.py
we-dashboard/: AGENTS.md  README.md  deploy.sh  new_arch.md  prd.md  pyproject.toml
we-dashboard/we_dash/: __init__.py  app.py  app.tcss  commands.py  discovery.py  models.py  terminals.py  tmux_support.py
