[project]
name = "watchfiles-systemd"
version = "0.1.15"
description = "Zero-config systemd user transient services with watchfiles live reload (ww)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ww", email = "noreply@example.com" },
]
dependencies = [
  "typer>=0.12",
  "dbus-next>=0.2.3",
  "textual>=1.0,<2.0",
]

[project.optional-dependencies]
dash-terminal = [
  "textual-terminal",
]
dash-tmux = [
  "libtmux>=0.21",
]

[project.scripts]
ww = "watchfiles_systemd.entry:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["watchfiles_systemd*"]
