[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "we-dash"
version = "0.1.9"
description = "WeDash: Minimal TUI to discover microservices and follow logs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "WeDash" }
]
dependencies = [
  "textual>=1.0,<2.0",
]

[project.optional-dependencies]
# Optional terminal backend (embedded terminal inside Textual UI)
# Install with: pip install .[terminal] or uv pip install -e .[terminal]
terminal = [
  "textual-terminal",
]
tmux = [
  "libtmux>=0.21",
]

[project.scripts]
we-dash = "we_dash.app:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build]
include = [
  "we_dash/**/*.py",
  "we_dash/**/*.tcss",
]

[tool.hatch.build.targets.wheel]
packages = ["we_dash"]
